<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="190dp"
    android:minWidth="200dp"
    android:background="@color/colorDen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/canle10dp"
        android:paddingTop="@dimen/canle10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showPlanetName"
            android:textSize="@dimen/SizeTextViewShowPlanerName"
            android:typeface="monospace"
            android:text="SAO THUY"
            android:textColor="@color/colorTrangVery"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/canle10dp"
        >
        <ImageView
            android:layout_width="@dimen/SizeImageViewDialogIntroductionPlanetManHinhChinh"
            android:layout_height="@dimen/SizeImageHeightViewDialogIntroductionPlanetManHinhChinh"
            android:src="@mipmap/saohoa2"
            android:layout_marginTop="@dimen/canle25dp"
            android:layout_marginLeft="@dimen/canle30dp"
            android:id="@+id/ShowPlanetImage"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/canle35dp"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/StyleTextViewTitleDialogPlanetIntroducion"
                    android:text="@string/TitleDialogPlanetManHinhChinhEnglishName"
                    />
                <TextView
                    style="@style/StyleTextViewTitleDialogPlanetIntroducion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="18399 kilometter"
                    android:id="@+id/showPlanetEnglish"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/StyleTextViewTitleDialogPlanetIntroducion"
                    android:text="@string/TitleDialogPlanetManHinhChinhSPlanet"
                    />
                <TextView
                    style="@style/StyleTextViewTitleDialogPlanetIntroducion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="18399 kilometter"
                    android:id="@+id/showPlanerSB"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/kicthuoc5dp">
                <TextView
                    style="@style/StyleTextViewTitleDialogPlanetIntroducion"
                    android:text="@string/TitleDialogPlanetManHinhChinhRPlanet"
                    />
                <TextView
                    style="@style/StyleTextViewTitleDialogPlanetIntroducion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="18399 kilometter"
                    android:id="@+id/showPlanerR"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/kicthuoc5dp">
                <TextView
                    style="@style/StyleTextViewTitleDialogPlanetIntroducion"
                    android:text="@string/TitleDialogPlanetManHinhChinhVPlanet"
                    />
                <TextView
                    style="@style/StyleTextViewTitleDialogPlanetIntroducion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="18399 kilometter"
                    android:id="@+id/showPlanerV"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginLeft="220dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/TextButtonDialogIntroductionManHinhChinhMore"
            android:textColor="@color/colorTrangVery"
            android:id="@+id/btnClickIntroductionPlanetManHinhChinMore"
            android:background="@drawable/custom_button_more_dialog_information_planer_click"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/custom_button_more_dialog_information_planer_click"
            android:layout_marginLeft="12dp"
            android:text="@string/TextButtonDialogIntroductionManHinhChinhExit"
            android:textColor="@color/colorTrang"
            android:id="@+id/btnClickIntroductionPlanetManHinhChinExit"
            />
    </LinearLayout>


</LinearLayout>